turned photo css added

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,9 +29,12 @@
           <a href="{{ site.github.owner_url }}" class="button"><small>Follow me on</small> GitHub</a>
         {% endif %}
       </div>
+      <div class="polaroid-images">
+          <a href="" title="Cubes"><img height="200" src="/assets/images/cubes-inside-a-cube.jpg" alt="Cubes" title="Cubes" /></a>
+      </div>
     </header>
 
-    <div id="content-wrapper">
+    <div id="content-wrapper" class="content-wrapper" >
       <div class="inner clearfix">
         <section id="main-content">
           {{ content }}
