--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,3 +30,80 @@ aside {
     }
   }
 }
+
+heades {
+  z-index: -1;
+}
+
+.content-wrapper {
+  z-index: 1;
+}
+
+// style images like a polaroid picture
+.polaroid-images a
+{
+    background: white;
+    display: inline;
+    float: right;
+    margin: 0 15px 30px;
+    padding: 10px 10px 25px;
+    text-align: center;
+    text-decoration: none;
+    -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, .3);
+    -moz-box-shadow: 0 4px 6px rgba(0,0,0,.3);
+    box-shadow: 0 4px 6px rgba(0,0,0,.3);
+    -webkit-transition: all .15s linear;
+    -moz-transition: all .15s linear;
+    transition: all .15s linear;
+    z-index: 0;
+    position:relative;
+
+    top: -200px;
+    right: 80px;
+}
+
+// add the caption on to the image
+.polaroid-images a:after {
+    color: #333;
+    font-size: 20px;
+    content: attr(title);
+    position: relative;
+    top:15px;
+}
+
+// fit the polaroid area
+.polaroid-images img {
+    display: block;
+    width: inherit;
+}
+
+// rotate
+.polaroid-images a
+{
+    -webkit-transform: rotate(-42deg);
+    -moz-transform: rotate(-42deg);
+    transform: rotate(-42deg);
+}
+.polaroid-images a:nth-child(2n)
+{
+    -webkit-transform: rotate(4deg);
+    -moz-transform: rotate(4deg);
+    transform: rotate(4deg);
+}
+.polaroid-images a:nth-child(3n) {
+    -webkit-transform: rotate(-24deg);
+    -moz-transform: rotate(-24deg);
+    transform: rotate(-24deg);
+}
+.polaroid-images a:nth-child(4n)
+{
+    -webkit-transform: rotate(14deg);
+    -moz-transform: rotate(14deg);
+    transform: rotate(14deg);
+}
+.polaroid-images a:nth-child(5n)
+{
+    -webkit-transform: rotate(-18deg);
+    -moz-transform: rotate(-18deg);
+    transform: rotate(-18deg);
+}
