--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,10 @@
     <![endif]-->
 
     {% seo %}
+    
+    {% if site.tags != "" %}
+      {% include collect-tags.html %}
+    {% endif %}
   </head>
 
   <body>
