C-Sharp tag page - image added

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <![endif]-->
 
     {% seo %}
-    
+
     {% if site.tags != "" %}
       {% include collect-tags.html %}
     {% endif %}
@@ -37,7 +37,9 @@
         {% comment %}Random number (based on a page content size) of spans is added to randomize rotation{% endcomment %}
         {% assign zeroToFour = page.content.size | modulo: 5 %}
         {% for i in (1..zeroToFour) %}<span></span>{% endfor %}
-        <a href="" title="Cubes"><img height="200" src="/assets/images/cubes-inside-a-cube.jpg" alt="Cubes" title="Cubes" /></a>
+        {% assign imageUrl = page.image.url | default: "/assets/images/cubes-inside-a-cube.jpg" %}
+        {% assign imageTitle = page.image.title | default: "Cubes" %}
+        <a href="" title="{{ imageTitle }}"><img height="200" src="{{ imageUrl }}" alt="{{ imageTitle }}" title="{{ imageTitle }}" /></a>
       </div>
     </header>
 
