--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
         {% endif %}
       </div>
       <div class="polaroid-images">
-        {% comment %}Random number (based on a page content size) of spans is added to randomize rotation{% endcomment %}
+        {% comment %}Random number (based on a page content size) of spans is added to randomize image rotation{% endcomment %}
         {% assign zeroToFour = page.content.size | modulo: 5 %}
         {% for i in (1..zeroToFour) %}<span></span>{% endfor %}
         {% assign imageSrc = page.image.src | default: "/assets/images/cubes-inside-a-cube.jpg" %}
