--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,6 +19,8 @@
       -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, .3);
       -moz-box-shadow: 0 4px 6px rgba(0,0,0,.3);
       box-shadow: 0 4px 6px rgba(0,0,0,.3);
+
+      max-width: 95%;
   }
 }
 
