--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,6 +88,19 @@
       </div>
     </div>
 
+    <footer>
+      <div class="inner">
+        <div class="information">
+          <div class="contacts">
+            <a href="mailto:dmitrykarpenko@gmail.com">Contact Me</a>
+          </div>
+          <div class="copyright">
+            © {{ site.time | date: '%Y' }}. All rights reserved.
+          </div>
+        </div>
+      </div>
+    </footer>
+
     {% if site.google_analytics %}
       <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
