--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,10 +92,10 @@
       <div class="inner">
         <div class="information">
           <div class="contacts">
-            <a href="mailto:dmitrykarpenko@gmail.com">Contact Me</a>
+            <a href="mailto:dmitrykarpenko@gmail.com">Contact me</a>
           </div>
           <div class="copyright">
-            © {{ site.time | date: '%Y' }}. All rights reserved.
+            © {{ site.time | date: '%Y' }} All rights reserved
           </div>
         </div>
       </div>
