--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,9 @@
         {% endif %}
       </div>
       <div class="polaroid-images">
-        {% comment %}Random number (based on a page content size) of spans is added to randomize image rotation{% endcomment %}
-        {% assign zeroToFour = page.content.size | modulo: 5 %}
+        {{page.url.size | inspect}}
+        {% comment %}Random number (based on a page content size and url size) of spans is added to randomize image rotation{% endcomment %}
+        {% assign zeroToFour = page.content.size | plus: page.url.size | modulo: 5 %}
         {% for i in (1..zeroToFour) %}<span></span>{% endfor %}
         {% assign imageSrc = page.image.src | default: "/assets/images/cubes-inside-a-cube.jpg" %}
         {% assign imageTitle = page.image.title | default: "Cubes" %}
