--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,6 +43,86 @@ aside {
       // bottom: 0px;
     }
   }
+
+  // show or hide more posts
+  .more-posts {
+    position: relative;
+    height: auto;
+    list-style-type: none;
+    ul {
+      margin: 0;
+      padding: 0;
+    }
+
+    [type="checkbox"] {
+      position: absolute;
+      left: -9999px;
+      & ~ ul {
+        width: 100%;
+        display: none;
+      }
+
+      // checked state styles
+      &:checked ~ ul {
+        display: block;
+      }
+      &:checked + label {
+        // if we have positioned relatively the element,
+        // during the "checked" state
+        // we have to change its type of positioning
+        position: absolute;
+        top: 100%;
+      }
+      &:checked + label:before {
+        content: 'Less';
+      }
+      &:checked + label:after {
+        content: '⇡';
+      }
+    }
+
+    label {
+      display: block;
+      width: 100%;
+      height: 20px;
+      padding: 6px 0 0 0;
+      border-width: 1px;
+      border-color: #dbe7f3;
+      border-style: solid none;
+      color: #666;
+      font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+      font-size: 11px;
+      font-weight: 600;
+      letter-spacing: 1px;
+      cursor: pointer;
+      position: absolute;
+      top: 0;
+      &:hover {
+        background: #fff;
+      }
+      &:before,
+      &:after {
+        position: absolute;
+      }
+      &:before {
+        content: 'More';
+        left: 6px;
+      }
+      &:after {
+        content: '⇣';
+        right: 10px;
+        animation: label-content-move .85s linear infinite alternate;
+      }
+      @keyframes label-content-move {
+        from {
+          transform: translateY(-2px);
+        }
+        to {
+          transform: translateY(2px);
+        }
+      }
+    }
+  }
 }
 
 .polaroid-images {
