--- a/_includes/menu-post.html
+++ b/_includes/menu-post.html
@@ -1,3 +1,4 @@
+  {% assign index = item.date | date: "%Y-%m-%dT%H:%M" %}
   <li id="menu-{{ index }}" class="menu-post">
     <a href="{{ item.url }}" title="Go to {{ item.title }}">{{ item.title }}</a>
     <div class="date">{{ item.date | date_to_long_string }}</div>
