--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,16 @@
     {% if site.tags != "" %}
       {% include collect-tags.html %}
     {% endif %}
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119542345-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-119542345-1');
+    </script>
   </head>
 
   <body>
