disqus - minor layout refinement

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,7 +59,9 @@
     <div id="content-wrapper" >
       <div class="inner clearfix">
         <section id="main-content">
-          {{ content }}
+          <div>
+            {{ content }}
+          </div>
 
           {% if page.comments %}
             <div id="disqus-content">
