--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -112,11 +112,12 @@
 }
 
 aside {
-  .menu-title {
+  .title {
     @extend .handwritten;
     font-size: 18px;
     font-weight: 700;
   }
+
   .menu-post {
     padding: 5px;
     //position: relative;
@@ -129,6 +130,12 @@ aside {
       // right: 18px;
       // bottom: 0px;
     }
+  }
+
+  .about {
+    @extend .handwritten;
+    font-size: 16px;
+    font-weight: 500;
   }
 
   // show or hide more posts
