about - name taken from site.author

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -126,7 +126,7 @@
 
           <p class="title">About:</p>
           <div class="about">
-            <p>Hi there! My name is Dmitry Karpenko, I'm a software developer, and this is my personal blog.</p>
+            <p>Hi there! My name is {{ site.author }}, I'm a software developer, and this is my personal blog.</p>
             <p>You could <a href="mailto:{{ site.email }}">contact me through email</a>
             or by leaving a comment below any of the posts.</p>
           </div>
