--- a/_layouts/tag-page.html
+++ b/_layouts/tag-page.html
@@ -1,14 +1,14 @@
 ---
 layout: default
 ---
-<div class="post">
+<div class="tag-page">
   <h1>Tag: {{ page.tag }}</h1>
   <ul>
     {% for post in site.tags[page.tag] %}
-      <li>
+      <li class="article">
         <a href="{{ post.url }}">{{ post.title }}</a>
-        ({{ post.date | date_to_string }})<br/>
-        {{ post.description }}
+        <div class="date">{{ post.date | date_to_string }}</div>
+        <p class="description">{{ post.description }}</p>
       </li>
     {% endfor %}
   </ul>
