--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,6 +26,20 @@
   font-weight: 500;
 }
 
+// custom list bullets
+ul {
+  list-style-type: none;
+  li {
+    &:before {
+        padding-right: 0.4em;
+        margin-left: -1.1em;
+        color: #9ddcff;
+        font-weight: 900;
+        content: "–";
+    }
+  }
+}
+
 #main-content {
    // makes article images also look like printed photos
    img.shadow {
@@ -59,6 +73,21 @@
         border: solid 1px #9ddcff; // 2px #dbe7f3;
       }
       // margin: 4px;
+    }
+  }
+}
+
+.tag-page {
+  line-height: 1.3;
+  .article {
+    .date {
+      margin-left: 1px;
+      font-size: 10px;
+    }
+    .description {
+      margin-left: 1px;
+      margin-top: 5px;
+      font-size: 12px;
     }
   }
 }
