minor about change

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -127,8 +127,8 @@
           <p class="title">About:</p>
           <div class="about">
             <p>Hi there! My name is {{ site.author }}, I'm a software developer, and this is my personal blog.</p>
-            <p>You could <a href="mailto:{{ site.email }}">contact me through email</a>
-            or by leaving a comment below any of the posts.</p>
+            <p>You can <a href="mailto:{{ site.email }}">contact me through e-mail</a>
+            or by leaving a comment below any of the articles.</p>
           </div>
 
           {% if site.github.is_project_page %}
